--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.0",
+    "react-ga": "^3.3.0",
     "react-scripts": "^2.1.3",
     "react-spinners": "^0.11.0",
     "react-star-ratings": "^2.3.0",
